# rate-my-bookshelf-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  image_processing.ipynb  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/services/: image_processing.py  init_easyocr.py  llm_client.py  ocr.py
