[project]
name = "rate-my-bookshelf-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "James Hughes",email = "jhughes2712@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "google-genai (>=1.48.0,<2.0.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "rapidocr-onnxruntime (>=1.4.4,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
